--- a/samples/ratecontrol/omnetpp.ini
+++ b/samples/ratecontrol/omnetpp.ini
@@ -1,11 +1,11 @@
 [General]
 network = RateControlExample
 #cmdenv-output-file = omnetpp.log
-cmdenv-express-mode = false
+#cmdenv-express-mode = false
 #debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
 #record-eventlog = true
-sim-time-limit = 250s
+sim-time-limit = 20s
 
 *.numCli = 1
 
@@ -20,7 +20,7 @@ sim-time-limit = 250s
 *.radioMedium.backgroundNoise.power = -100dBm
 *.*Host*.networkLayer.arpType = "GlobalARP"
 **.addStaticRoutes = false
-*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 10
+#*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 10
 
 # environment settings
 *.physicalEnvironment.config = xmldoc("obstacles.xml")
@@ -41,11 +41,15 @@ sim-time-limit = 250s
 
 # nic settings
 **.opMode = "a"
-*.*Host*.wlan*.bitrate = 6Mbps
-*.*Host*.wlan*.mac.controlBitrate = 24Mbps
-*.*Host*.wlan[*].radio.transmitter.power = 50mW
-*.*Host*.wlan[*].mac.rateControlModuleType = "AARFRateControl"
+*.*Host*.wlan*.bitrate = 54Mbps
+#*.*Host*.wlan*.mac.controlBitrate = 24Mbps
+*.*Host*.wlan[*].radio.transmitter.power = 750mW
+*.*Host*.wlan[*].mac.rateControlModuleType = ${rateControl="", "ARFRateControl", "AARFRateControl"}
 *.*Host*.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
+#*.*Host*.wlan[*].mac.rateControl.increaseThresholdFactor = 1
+#*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
+#*.*Host*.wlan[*].mac.rateControl.decreaseThreshold = 10
+
 
 # application settings
 *.*Host*.numUdpApps = 1
@@ -54,7 +58,7 @@ sim-time-limit = 250s
 *.Host*.udpApp[0].destAddresses = "sinkHost"
 *.Host*.udpApp[0].destPort = 5000
 *.Host*.udpApp[0].messageLength = 1000B
-*.Host*.udpApp[0].sendInterval = 100ms
+*.Host*.udpApp[0].sendInterval = 0.1ms
 #*.Host*.udpApp[0].startTime = 200s
 
 *.sinkHost.udpApp[0].typename = "UDPSink"
@@ -63,11 +67,7 @@ sim-time-limit = 250s
  #Mobility
 *.*Host*.mobilityType = "RectangleMobility"
 **.Host[*].mobility.startPos = 0
-**.Host[*].mobility.speed = 10mps
+**.Host[*].mobility.speed = 200mps
 
 **.sinkHost.mobility.startPos = 3 
-**.sinkHost.mobility.speed = 5mps
-
-[Config Mac]
-
-
+**.sinkHost.mobility.speed = 100mps
