--- a/samples/ratecontrol/omnetpp.ini
+++ b/samples/ratecontrol/omnetpp.ini
@@ -20,7 +20,8 @@ sim-time-limit = 20s
 *.radioMedium.backgroundNoise.power = -100dBm
 *.*Host*.networkLayer.arpType = "GlobalARP"
 **.addStaticRoutes = false
-#*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 10
+*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
+*.*Host*.wlan[*].mac.rateControl.decreaseThreshold = 5
 
 # environment settings
 *.physicalEnvironment.config = xmldoc("obstacles.xml")
@@ -43,7 +44,7 @@ sim-time-limit = 20s
 **.opMode = "a"
 *.*Host*.wlan*.bitrate = 54Mbps
 #*.*Host*.wlan*.mac.controlBitrate = 24Mbps
-*.*Host*.wlan[*].radio.transmitter.power = 200mW
+*.*Host*.wlan[*].radio.transmitter.power = 500mW
 *.*Host*.wlan[*].mac.rateControlModuleType = ${rateControl="", "ARFRateControl", "AARFRateControl"}
 *.*Host*.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 #*.*Host*.wlan[*].mac.rateControl.increaseThresholdFactor = 1
