--- a/samples/ratecontrol/omnetpp.ini
+++ b/samples/ratecontrol/omnetpp.ini
@@ -22,6 +22,7 @@ sim-time-limit = 50s
 **.addStaticRoutes = false
 *.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
 *.*Host*.wlan[*].mac.rateControl.decreaseThreshold = 5
+*.*Host*.wlan[*].mac.rateControl.interval = 1s
 
 # environment settings
 *.physicalEnvironment.config = xmldoc("obstacles.xml")
@@ -44,7 +45,7 @@ sim-time-limit = 50s
 **.opMode = "a"
 *.*Host*.wlan*.bitrate = 54Mbps
 #*.*Host*.wlan*.mac.controlBitrate = 24Mbps
-*.*Host*.wlan[*].radio.transmitter.power = 25mW
+*.*Host*.wlan[*].radio.transmitter.power = 50mW
 *.*Host*.wlan[*].mac.rateControlModuleType = ${rateControl="", "ARFRateControl", "AARFRateControl"}
 *.*Host*.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 #*.*Host*.wlan[*].mac.rateControl.increaseThresholdFactor = 1
