--- a/samples/ratecontrol/omnetpp.ini
+++ b/samples/ratecontrol/omnetpp.ini
@@ -5,7 +5,7 @@ network = RateControlExample
 #debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
 #record-eventlog = true
-sim-time-limit = 50s
+sim-time-limit = 25s
 
 *.numCli = 1
 
@@ -46,7 +46,7 @@ sim-time-limit = 50s
 *.*Host*.wlan*.bitrate = 54Mbps
 #*.*Host*.wlan*.mac.controlBitrate = 24Mbps
 *.*Host*.wlan[*].radio.transmitter.power = 50mW
-*.*Host*.wlan[*].mac.rateControlModuleType = ${rateControl="", "ARFRateControl", "AARFRateControl"}
+*.*Host*.wlan[*].mac.rateControlModuleType = ${rateControl="", "AARFRateControl"}
 *.*Host*.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 #*.*Host*.wlan[*].mac.rateControl.increaseThresholdFactor = 1
 #*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
