--- a/samples/ratecontrol/omnetpp.ini
+++ b/samples/ratecontrol/omnetpp.ini
@@ -1,10 +1,6 @@
 [General]
 network = RateControlExample
-#cmdenv-output-file = omnetpp.log
-#cmdenv-express-mode = false
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
 sim-time-limit = 25s
 
 *.numCli = 1
@@ -20,9 +16,6 @@ sim-time-limit = 25s
 *.radioMedium.backgroundNoise.power = -100dBm
 *.*Host*.networkLayer.arpType = "GlobalARP"
 **.addStaticRoutes = false
-*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
-*.*Host*.wlan[*].mac.rateControl.decreaseThreshold = 5
-*.*Host*.wlan[*].mac.rateControl.interval = 1s
 
 # environment settings
 *.physicalEnvironment.config = xmldoc("obstacles.xml")
@@ -33,25 +26,20 @@ sim-time-limit = 25s
 *.physicalEnvironment.spaceMaxY = 400m
 *.physicalEnvironment.spaceMaxZ = 50m
 
-# visualization
+# visualization settings
 *.visualizer.obstacleLossVisualizer.displayIntersectionTrail = true
 *.visualizer.physicalLinkVisualizer.packetNameFilter = "UDP*"
 *.visualizer.dataLinkVisualizer.packetNameFilter = "UDP*"
 
-#**.displayIntersectionTrail = true
-
-
 # nic settings
 **.opMode = "a"
 *.*Host*.wlan*.bitrate = 54Mbps
-#*.*Host*.wlan*.mac.controlBitrate = 24Mbps
 *.*Host*.wlan[*].radio.transmitter.power = 50mW
 *.*Host*.wlan[*].mac.rateControlModuleType = ${rateControl="", "AARFRateControl"}
 *.*Host*.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
-#*.*Host*.wlan[*].mac.rateControl.increaseThresholdFactor = 1
-#*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
-#*.*Host*.wlan[*].mac.rateControl.decreaseThreshold = 10
-
+*.*Host*.wlan[*].mac.rateControl.increaseThreshold = 20
+*.*Host*.wlan[*].mac.rateControl.decreaseThreshold = 5
+*.*Host*.wlan[*].mac.rateControl.interval = 1s
 
 # application settings
 *.*Host*.numUdpApps = 1
@@ -61,12 +49,11 @@ sim-time-limit = 25s
 *.Host*.udpApp[0].destPort = 5000
 *.Host*.udpApp[0].messageLength = 1000B
 *.Host*.udpApp[0].sendInterval = 0.1ms
-#*.Host*.udpApp[0].startTime = 200s
 
 *.sinkHost.udpApp[0].typename = "UDPSink"
 *.sinkHost.udpApp[0].localPort = 5000
 
- #Mobility
+# mobility settings
 *.*Host*.mobilityType = "RectangleMobility"
 **.Host[*].mobility.startPos = 0
 **.Host[*].mobility.speed = 200mps
