--- a/samples/errorrate/omnetpp.ini
+++ b/samples/errorrate/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = ErrorRateTest
+network = ErrorRateExample
 sim-time-limit = 1s
 tkenv-plugin-path = ../../../etc/plugins
 
@@ -19,10 +19,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mobility.initialZ = 0m
 *.sourceHost.mobility.initialX = 0m
 *.destinationHost.mobility.initialX = ${distance=100..8000 step 25}m
-#*.destinationHost.mobility.initialX = ${distance=100..8000 step 25}m
 
 **.bitrate = ${bitrate=6,12,24,36,54}Mbps
-#**.bitrate = ${bitrate=1,2,5.5,11,6,12,24,36,54}Mbps
 
 # ping app (host[0] pinged by others)
 *.sourceHost.numPingApps = 1
