--- a/samples/errorrate/omnetpp.ini
+++ b/samples/errorrate/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = ErrorRateExample
-sim-time-limit = 1s
+sim-time-limit = 0.4ms
 tkenv-plugin-path = ../../../etc/plugins
 
 **.constraintAreaMinX = 0m
@@ -23,9 +23,19 @@ tkenv-plugin-path = ../../../etc/plugins
 **.bitrate = ${bitrate=6,12,24,36,54}Mbps
 
 # ping app (host[0] pinged by others)
-*.sourceHost.numPingApps = 1
-*.sourceHost.pingApp[0].destAddr = "destinationHost"
-*.sourceHost.pingApp[0].startTime = 0s
+*.sourceHost.numUdpApps = 1
+*.sourceHost.udpApp[0].typename = "UDPBasicApp"
+*.sourceHost.udpApp[0].destAddresses = "destinationHost"
+*.sourceHost.udpApp[0].startTime = 0s
+*.sourceHost.udpApp[0].packetName = "UDPData-"
+*.sourceHost.udpApp[0].destPort = 5000
+*.sourceHost.udpApp[0].messageLength = 56byte
+*.sourceHost.udpApp[0].stopTime = 0.1ms
+*.sourceHost.udpApp[0].sendInterval = 1s
+
+*.destinationHost.numUdpApps = 1
+*.destinationHost.udpApp[0].typename = "UDPSink"
+*.destinationHost.udpApp[0].localPort = 5000
 
 # radio
 **.transmitter.power = 10mW
