--- a/samples/throughput/omnetpp.ini
+++ b/samples/throughput/omnetpp.ini
@@ -5,6 +5,8 @@ network = Throughput
 
 *.*Host.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 
+*.*Host.wlan[*].opMode = "a"
+
 *.sourceHost.numUdpApps = 1
 *.sourceHost.udpApp[0].typename = "UDPBasicApp"
 *.sourceHost.udpApp[*].destAddresses = "destinationHost"
@@ -12,7 +14,7 @@ network = Throughput
 *.sourceHost.udpApp[*].messageLength = 1000byte
 *.sourceHost.udpApp[*].packetName = "UDPData-"
 *.sourceHost.udpApp[*].startTime = 0s
-*.sourceHost.udpApp[*].sendInterval = 1s
+*.sourceHost.udpApp[*].sendInterval = 0.1ms
 
 *.destinationHost.numUdpApps = 1
 *.destinationHost.udpApp[0].typename = "UDPSink"
