--- a/samples/throughput/omnetpp.ini
+++ b/samples/throughput/omnetpp.ini
@@ -1,11 +1,15 @@
 [General]
 network = Throughput
+sim-time-limit = 1s
+record-eventlog = true
 
 *.*Host.networkLayer.arpType = "GlobalARP"
 
 *.*Host.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 
 *.*Host.wlan[*].opMode = "a"
+#*.*Host.wlan[*].mac.controlBitrate = 6Mbps
+#*.*Host.wlan[*].mac.controlBitrate = 24Mbps
 
 *.sourceHost.numUdpApps = 1
 *.sourceHost.udpApp[0].typename = "UDPBasicApp"
