--- a/samples/errorrate/omnetpp.ini
+++ b/samples/errorrate/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = ErrorRateExample
-sim-time-limit = 0.4ms
+#sim-time-limit = 1s
 tkenv-plugin-path = ../../../etc/plugins
 
 **.constraintAreaMinX = 0m
@@ -18,9 +18,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mobility.initialY = 500m
 **.mobility.initialZ = 0m
 *.sourceHost.mobility.initialX = 0m
-*.destinationHost.mobility.initialX = ${distance=100..8000 step 25}m
+*.destinationHost.mobility.initialX = ${distance=10..400 step 2}m
 
 **.bitrate = ${bitrate=6,12,24,36,54}Mbps
+*.*Host*.wlan[*].mac.retryLimit = 0
 
 # ping app (host[0] pinged by others)
 *.sourceHost.numUdpApps = 1
@@ -38,7 +39,9 @@ tkenv-plugin-path = ../../../etc/plugins
 *.destinationHost.udpApp[0].localPort = 5000
 
 # radio
-**.transmitter.power = 10mW
-**.receiver.snirThreshold = 0dB
-**.receiver.energyDetection = -109dBm
-**.receiver.sensitivity = -109dBm
+*.*Host.wlan[*].radio.transmitter.power = 10mW
+*.*Host.wlan[*].radio.receiver.snirThreshold = 0dB
+#*.*Host.wlan[*].radio.receiver.energyDetection = -85dBm
+#*.*Host.wlan[*].radio.receiver.sensitivity = -85dBm
+
+*.radioMedium.backgroundNoise.power = -86dBm
