--- a/samples/throughput/omnetpp.ini
+++ b/samples/throughput/omnetpp.ini
@@ -4,12 +4,13 @@ sim-time-limit = 1s
 record-eventlog = true
 
 *.*Host.networkLayer.arpType = "GlobalARP"
+**.throughput.result-recording-modes = mean 
 
 *.*Host.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 
 *.*Host.wlan[*].opMode = "a"
-#*.*Host.wlan[*].mac.controlBitrate = 6Mbps
-#*.*Host.wlan[*].mac.controlBitrate = 24Mbps
+
+*.*Host.wlan[*].bitrate = ${bitrate = 6,9,12,18,24,36,48,54}Mbps
 
 *.sourceHost.numUdpApps = 1
 *.sourceHost.udpApp[0].typename = "UDPBasicApp"
