--- a/samples/errorrate/omnetpp.ini
+++ b/samples/errorrate/omnetpp.ini
@@ -23,7 +23,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.bitrate = ${bitrate=6,12,24,36,54}Mbps
 *.*Host*.wlan[*].mac.retryLimit = 0
 
-# ping app (host[0] pinged by others)
+# UDP app
 *.sourceHost.numUdpApps = 1
 *.sourceHost.udpApp[0].typename = "UDPBasicApp"
 *.sourceHost.udpApp[0].destAddresses = "destinationHost"
@@ -41,7 +41,4 @@ tkenv-plugin-path = ../../../etc/plugins
 # radio
 *.*Host.wlan[*].radio.transmitter.power = 10mW
 *.*Host.wlan[*].radio.receiver.snirThreshold = 0dB
-#*.*Host.wlan[*].radio.receiver.energyDetection = -85dBm
-#*.*Host.wlan[*].radio.receiver.sensitivity = -85dBm
-
 *.radioMedium.backgroundNoise.power = -86dBm
