Examples: adhoc/ieee80211 changes for validation

--- a/examples/adhoc/ieee80211/omnetpp.ini
+++ b/examples/adhoc/ieee80211/omnetpp.ini
@@ -34,6 +34,13 @@ tkenv-plugin-path = ../../../etc/plugins
 **.pingApp[*].printPing = true
 
 # nic settings
+
+#for validation
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+**.wlan[*].mac.qosStation = false
+#for validation
+
 **.wlan[*].bitrate = 2Mbps
 
 **.wlan[*].mgmt.frameCapacity = 10
