Examples: adhoc/hostautoconf changes for validation

--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 #debug-on-errors = true
-#record-eventlog = true
+record-eventlog = true
 network = Scenario
 sim-time-limit = 60min
 
@@ -35,6 +35,13 @@ cmdenv-express-mode = true
 **.udpApp[0].sendInterval = uniform(10s, 30s)
 
 # nic settings
+
+# for validation
+**.wlan[*].mac.qosStation = false
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+# for validation
+
 **.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
 **.wlan[*].bitrate = 2Mbps
 
