--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -6,9 +6,6 @@ network = QosThroughput
 tkenv-plugin-path = ../../../etc/plugins
 record-eventlog = true
 
-sim-time-limit = 5s
-
-
 **.arpType = "GlobalARP"
 
 **.constraintAreaMinX = 0m
@@ -74,6 +71,11 @@ extends = oldMacBase
 
 [Config MacNonQos]
 extends = MacBase
+#for validation
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+**.wlan[*].mac.qosStation = false
+#for validation
 
 [Config Edca]
 **.wlan[*].classifierType = "ExampleQoSClassifier"
