--- a/examples/wireless/ratecontrol/omnetpp.ini
+++ b/examples/wireless/ratecontrol/omnetpp.ini
@@ -1,10 +1,14 @@
 [General]
 network = RateControlTest
-#cmdenv-output-file = omnetpp.log
 cmdenv-express-mode = false
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
+# for validation
+record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+# for validation
 
 **.numCli = 1
 
@@ -33,6 +37,11 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 1Mbps
+# for validation
+**.wlan*.mac.qosStation = false
+**.wlan*.*.basicBitrate = 24Mbps
+**.wlan*.*.controlBitrate = 1Mbps
+# for validation
 
 **.mac.maxQueueSize = 14
 **.mac.rtsThresholdBytes = 3000B
@@ -50,7 +59,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.cli.destAddress = "20:00:00:00:00:00"
 **.cli.sendInterval = 100ms
 
-**.mac.rateControlModuleType = "AARFRateControl"
+**.mac.rateControlType = "AARFRateControl"
 
 # Mobility
 **.cliHost[*].mobility.startPos = 0
