--- a/examples/wireless/ratecontrol/omnetpp.ini
+++ b/examples/wireless/ratecontrol/omnetpp.ini
@@ -36,11 +36,12 @@ sim-time-limit = 100s
 **.cliHost[*].wlan.mac.address = "auto"
 
 # nic settings
-**.wlan*.bitrate = 1Mbps
+**.wlan*.bitrate = -1bps
 # for validation
 **.wlan*.mac.qosStation = false
 **.wlan*.*.basicBitrate = 24Mbps
 **.wlan*.*.controlBitrate = 1Mbps
+**.wlan*.*.initialRateControlRate = 1Mbps
 # for validation
 
 **.mac.maxQueueSize = 14
