--- a/samples/errorrate/omnetpp.ini
+++ b/samples/errorrate/omnetpp.ini
@@ -20,7 +20,8 @@ tkenv-plugin-path = ../../../etc/plugins
 *.sourceHost.mobility.initialX = 0m
 *.destinationHost.mobility.initialX = ${distance=10..550 step 2}m
 
-**.bitrate = ${bitrate=6,12,24,36,54}Mbps
+*.*Host*.wlan[*].opMode = "a"
+**.bitrate = ${bitrate=6,9,12,18,24,36,48,54}Mbps
 *.*Host*.wlan[*].mac.retryLimit = 0
 
 # UDP app
