Example: temporary changes for validation.

--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -1,10 +1,13 @@
 [General]
 network = QosThroughput
-#cmdenv-output-file = omnetpp.log
-#cmdenv-express-mode = false
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
+# for validation
 record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 10s
+# for validation
 
 **.arpType = "GlobalARP"
 
@@ -72,6 +75,7 @@ extends = oldMacBase
 [Config MacNonQos]
 extends = MacBase
 #for validation
+**.wlan[*].*.dataBitrate = 54Mbps
 **.wlan[*].*.basicBitrate = 24Mbps
 **.wlan[*].*.controlBitrate = 1Mbps
 **.wlan[*].mac.qosStation = false
