--- a/examples/wireless/throughput/omnetpp.ini
+++ b/examples/wireless/throughput/omnetpp.ini
@@ -1,10 +1,14 @@
 [General]
 network = Throughput
-#cmdenv-output-file = omnetpp.log
-cmdenv-express-mode = false
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
+# for validation
 record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 20s
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -20,19 +24,16 @@ record-eventlog = true
 **.mgmt.frameCapacity = 10
 
 # nic settings
-**.wlan*.bitrate = 1Mbps
-
-
+**.mac.dataBitrate = 1Mbps
+**.mac.basicBitrate = 24Mbps
+**.mac.controlBitrate = 1Mbps
+**.mac.qosStation = false
 
 **.mac.maxQueueSize = 14
 **.mac.rtsThresholdBytes = 3000B
 **.mac.retryLimit = 7
 **.mac.cwMinData = 31
 **.mac.cwMinBroadcast = 31
-
-
-
-
 
 **.radio.transmitter.power = 20mW
 **.radio.receiver.sensitivity = -85dBm
@@ -43,7 +44,6 @@ record-eventlog = true
 **.cli.respLength = 0
 **.cli.destAddress = "20:00:00:00:00:00"
 **.cli.sendInterval = 0.5ms # 16 Mbps
-
 
 [Config Throughput1]
 description = "1 host to AP"
@@ -60,5 +60,3 @@ extends = Throughput2
 [Config Mac]
 extends = Throughput2
 **.wlan.macType = "Ieee80211CompatibleMac"
-
-
