Tests: Followed recent changes in power infrastructure.

--- a/tutorials/wireless/omnetpp.ini
+++ b/tutorials/wireless/omnetpp.ini
@@ -97,7 +97,7 @@ extends = Wireless06
 description = Modeling energy consumption
 extends = Wireless07
 
-*.host*.wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
+*.host*.wlan[0].radio.energyConsumerType = "StateBasedEpEnergyConsumer"
 *.host*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
 *.host*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
 *.host*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
@@ -107,7 +107,7 @@ extends = Wireless07
 *.host*.wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
 *.host*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
 
-*.host*.energyStorageType = "IdealEnergyStorage"
+*.host*.energyStorageType = "IdealEpEnergyStorage"
 
 *.host*.wlan[0].radio.displayInterferenceRange = false
 *.hostR1.wlan[0].radio.displayCommunicationRange = false
