--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -4,6 +4,7 @@ tkenv-plugin-path = ../../../etc/plugins
 # for validation
 record-eventlog = true
 cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
 fingerprint-events="NOT(**.mac.**)"
 fingerprint = 000-000
 sim-time-limit = 10s
@@ -64,6 +65,11 @@ sim-time-limit = 10s
 **.mac.TXOP3 = 0
 
 [Config MacBase]
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#
 **.wlan[*].macType = "Ieee80211CompatibleMac"
 **.mac.maxQueueSize = -1
 **.mac.ctrl.typename = ${"OptimizedCollisionController","CollisionController"}
@@ -75,9 +81,6 @@ extends = oldMacBase
 [Config MacNonQos]
 extends = MacBase
 #for validation
-**.wlan[*].*.dataBitrate = 54Mbps
-**.wlan[*].*.basicBitrate = 24Mbps
-**.wlan[*].*.controlBitrate = 1Mbps
 **.wlan[*].mac.qosStation = false
 #for validation
 
@@ -89,4 +92,7 @@ extends = MacBase
 extends = oldMacBase, Edca
 
 [Config MacQos]
+#for validation
+**.mac.hcf.isBlockAckSupported = false
+#for validation
 extends = MacBase, Edca
