--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -69,7 +69,8 @@ sim-time-limit = 10s
 **.wlan[*].*.dataBitrate = 54Mbps
 **.wlan[*].*.basicBitrate = 24Mbps
 **.wlan[*].*.controlBitrate = 1Mbps
-#
+**.wlan[*].*.hcf.edcaTxopProcedures[*].txopLimit = 0s
+#for validation
 **.wlan[*].macType = "Ieee80211CompatibleMac"
 **.mac.maxQueueSize = -1
 **.mac.ctrl.typename = ${"OptimizedCollisionController","CollisionController"}
