--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -66,6 +66,11 @@ sim-time-limit = 10s
 
 [Config MacBase]
 #for validation
+num-rngs = 5
+**.wlan[*].*.hcf.edca.edcaf[0].contention.rng-0 = 1
+**.wlan[*].*.hcf.edca.edcaf[1].contention.rng-0 = 2
+**.wlan[*].*.hcf.edca.edcaf[2].contention.rng-0 = 3
+**.wlan[*].*.hcf.edca.edcaf[3].contention.rng-0 = 4
 **.wlan[*].*.dataBitrate = 54Mbps
 **.wlan[*].*.basicBitrate = 24Mbps
 **.wlan[*].*.controlBitrate = 1Mbps
