--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -7,7 +7,7 @@ cmdenv-log-prefix = "%f %g [%l] "
 cmdenv-express-mode = false
 fingerprint-events="NOT(**.mac.**)"
 fingerprint = 000-000
-sim-time-limit = 10s
+sim-time-limit = 1s
 # for validation
 
 **.arpType = "GlobalARP"
@@ -75,6 +75,7 @@ num-rngs = 5
 **.wlan[*].*.basicBitrate = 24Mbps
 **.wlan[*].*.controlBitrate = 1Mbps
 **.wlan[*].*.hcf.edcaTxopProcedures[*].txopLimit = 0s
+**.wlan[*].*.hcf.originatorMacDataService.aMsduAggregationPolicyType = ""
 #for validation
 **.wlan[*].macType = "Ieee80211CompatibleMac"
 **.mac.maxQueueSize = -1
