Make TODO files, writing some text, update ini and ned file

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -3,9 +3,10 @@ tkenv-plugin-path = ../../../etc/plugins
 debug-on-errors = true
 record-eventlog = true
 
+
 [Config Visualization01]
 description = Showing Boston downtown
-network = VisualizationNetworkA
+network = VisualizationA
 
 # coordinate system parameters
 *.coordinateSystem.playgroundLongitude = -71.070421deg
@@ -20,3 +21,72 @@ network = VisualizationNetworkA
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
+
+#[Config Visualization02]	--dependency
+#########################
+
+[Config Visualization03]
+extends = Visualization01		#TODO: if Visualization02 became active change Visualization01 to Visualization02
+description = Displaying communication & interference range
+network = VisualizationB
+
+# wlan parameters
+*.accessPoint.wlan[*].radio.transmitter.power = 1mW
+*.pedestrian0.wlan[*].radio.transmitter.power = 0.7mW
+*.pedestrian1.wlan[*].radio.transmitter.power = 0.7mW
+
+
+# medium visualizer parameters
+*.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
+*.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
+
+#[Config Visualization04]	--dependency
+#########################
+
+[Config Visualization05]
+extends = Visualization03		#TODO: if Visualization04 became active change Visualization04 to Visualization04
+description = Displaying recent movement and orientation
+
+#access point mobility parameters
+*.accessPoint.mobilityType = "StationaryMobility"
+
+#pedestrians common initial parameters
+*.pedestrian*.mobilityType = "MassMobility"
+*.pedestrian*.mobility.initialZ = 0.5m
+*.pedestrian*.mobility.initFromDisplayString = false
+
+#pedestrian0 mobility parameters
+*.pedestrian0.mobility.initialX = 395m
+*.pedestrian0.mobility.initialY = 63m
+*.pedestrian0.mobility.constraintAreaMinX = 390m
+*.pedestrian0.mobility.constraintAreaMinY = 63m
+*.pedestrian0.mobility.constraintAreaMaxX = 400m
+*.pedestrian0.mobility.constraintAreaMaxY = 230m
+
+#pedestrian1 mobility parameters
+*.pedestrian1.mobility.initialX = 595m
+*.pedestrian1.mobility.initialY = 75m
+*.pedestrian1.mobility.constraintAreaMinX = 590m
+*.pedestrian1.mobility.constraintAreaMinY = 75m
+*.pedestrian1.mobility.constraintAreaMaxX = 600m
+*.pedestrian1.mobility.constraintAreaMaxY = 230m
+
+#pedestrians common movement parameters
+*.pedestrian*.mobility.constraintAreaMaxZ = 1m
+*.pedestrian*.mobility.changeInterval = 0.3s
+*.pedestrian*.mobility.changeAngleBy = uniform(-15deg, 15deg)
+*.pedestrian*.mobility.speed = 2mps
+
+
+# mobility visualizer parameters
+*.visualizer.*.mobilityVisualizer.displayVelocity = true
+*.visualizer.*.mobilityVisualizer.displayMovementTrail = true
+
+[Config Visualization06]
+extends = Visualization05
+description = Showing IP addresses
+
+#interface table visualizer parameters
+*.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
+*.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
+
