Adding steps, writing text, editing TODO files

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -22,8 +22,12 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
-#[Config Visualization02]	--dependency
+
+#[Config Visualization02]	#dependency
+#extends = Visualization01
+#description = Adding static 3D objects to the scene
 #########################
+
 
 [Config Visualization03]
 extends = Visualization01		#TODO: if Visualization02 became active change Visualization01 to Visualization02
@@ -35,27 +39,33 @@ network = VisualizationB
 *.pedestrian0.wlan[*].radio.transmitter.power = 0.7mW
 *.pedestrian1.wlan[*].radio.transmitter.power = 0.7mW
 
-
 # medium visualizer parameters
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 
-#[Config Visualization04]	--dependency
-#########################
+
+[Config Visualization04]
+extends = Visualization03
+description = Using 3D models for network nodes
+
+# osgModel visualizer parameters
+*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale" # external 3D animated osg model, I stole from "inet/examples/visualization/networknode/" folder
+*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale"
+
 
 [Config Visualization05]
-extends = Visualization03		#TODO: if Visualization04 became active change Visualization04 to Visualization04
-description = Displaying recent movement and orientation
+extends = Visualization04
+description = Displaying recent movement
 
-#access point mobility parameters
+# access point mobility parameters
 *.accessPoint.mobilityType = "StationaryMobility"
 
-#pedestrians common initial parameters
+# pedestrians common initial parameters
 *.pedestrian*.mobilityType = "MassMobility"
 *.pedestrian*.mobility.initialZ = 0.5m
 *.pedestrian*.mobility.initFromDisplayString = false
 
-#pedestrian0 mobility parameters
+# pedestrian0 mobility parameters
 *.pedestrian0.mobility.initialX = 395m
 *.pedestrian0.mobility.initialY = 63m
 *.pedestrian0.mobility.constraintAreaMinX = 390m
@@ -63,7 +73,7 @@ description = Displaying recent movement and orientation
 *.pedestrian0.mobility.constraintAreaMaxX = 400m
 *.pedestrian0.mobility.constraintAreaMaxY = 230m
 
-#pedestrian1 mobility parameters
+# pedestrian1 mobility parameters
 *.pedestrian1.mobility.initialX = 595m
 *.pedestrian1.mobility.initialY = 75m
 *.pedestrian1.mobility.constraintAreaMinX = 590m
@@ -71,22 +81,87 @@ description = Displaying recent movement and orientation
 *.pedestrian1.mobility.constraintAreaMaxX = 600m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
-#pedestrians common movement parameters
+# pedestrians common movement parameters
 *.pedestrian*.mobility.constraintAreaMaxZ = 1m
-*.pedestrian*.mobility.changeInterval = 0.3s
-*.pedestrian*.mobility.changeAngleBy = uniform(-15deg, 15deg)
+*.pedestrian*.mobility.changeInterval = 0.5s
+*.pedestrian*.mobility.changeAngleBy = uniform(-10deg, 10deg)
 *.pedestrian*.mobility.speed = 2mps
-
 
 # mobility visualizer parameters
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
 
+
 [Config Visualization06]
 extends = Visualization05
 description = Showing IP addresses
 
-#interface table visualizer parameters
+# interface table visualizer parameters
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
+
+
+[Config Visualization07]
+extends = Visualization06
+description = Showing wifi association
+
+# interface table visualizer parameters must turn off, because they're overlapping
+*.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
+*.visualizer.*.interfaceTableVisualizer.interfaceFilter = ""
+
+# Doesn't work
+*.visualizer.*.infoVisualizer.modules = "*.pedestrian*.wlan[0].mgmt"
+*.visualizer.*.infoVisualizer.backgroundColor = "gray"
+*.visualizer.*.infoVisualizer.fontColor = "blue"
+#*.visualizer.*.infoVisualizer.modules = "*.pedestrian*.wlan[0].mgmt.assocAP"
+#*.visualizer.*.infoVisualizer.content = "info"
+
+
+[Config Visualization08]
+extends = Visualization07
+description = Displaying transmissions & receptions
+
+# void application parameters
+*.pedestrian*.numUdpApps = 1
+*.pedestrian*.udpApp[0].typename = "UDPBasicApp"
+*.pedestrian0.udpApp[0].destAddresses = "pedestrian1"
+*.pedestrian1.udpApp[0].destAddresses = "pedestrian0"
+*.pedestrian*.udpApp[0].destPort = 5000
+*.pedestrian*.udpApp[0].localPort = 5000
+*.pedestrian*.udpApp[0].messageLength = 100B
+*.pedestrian*.udpApp[0].sendInterval = uniform(90ms, 110ms)
+*.pedestrian*.udpApp[0].packetName = "VoiceStream"
+
+# medium visualizer parameters
+*.visualizer.*.mediumVisualizer.displayTransmissions = true
+*.visualizer.*.mediumVisualizer.displayReceptions = true
+*.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
+*.visualizer.*.mediumVisualizer.receptionImage = "reception.png"
+
+
+[Config Visualization09]
+extends = Visualization08
+description = Showing propagating signals
+
+# medium visualizer parameter
+*.visualizer.*.mediumVisualizer.displaySignals = true
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 25ns
+*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "both"
+
+
+[Config Visualization10]
+extends = Visualization09
+description = Showing active physical links
+
+*.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
+
+
+[Config Visualization11]
+extends = Visualization10
+description = Showing active data links
+
+# link visualizer parameters
+*.visualizer.*.physicalLinkVisualizer.packetNameFilter = ""
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "VoiceStream*"
+
 
