add VisualizationC network, add config Visualization12, Visualization13, add text Step 12

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -36,8 +36,7 @@ network = VisualizationB
 
 # wlan parameters
 *.accessPoint.wlan[*].radio.transmitter.power = 1mW
-*.pedestrian0.wlan[*].radio.transmitter.power = 0.7mW
-*.pedestrian1.wlan[*].radio.transmitter.power = 0.7mW
+*.pedestrian*.wlan[*].radio.transmitter.power = 0.7mW
 
 # medium visualizer parameters
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
@@ -49,8 +48,8 @@ extends = Visualization03
 description = Using 3D models for network nodes
 
 # osgModel visualizer parameters
-*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale" # external 3D animated osg model, I stole from "inet/examples/visualization/networknode/" folder
-*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale"
+*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot" # external 3D animated osg model, I stole from "inet/examples/visualization/networknode/" folder
+*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 
 
 [Config Visualization05]
@@ -74,11 +73,11 @@ description = Displaying recent movement
 *.pedestrian0.mobility.constraintAreaMaxY = 230m
 
 # pedestrian1 mobility parameters
-*.pedestrian1.mobility.initialX = 595m
-*.pedestrian1.mobility.initialY = 75m
-*.pedestrian1.mobility.constraintAreaMinX = 590m
+*.pedestrian1.mobility.initialX = 600m
+*.pedestrian1.mobility.initialY = 85m
+*.pedestrian1.mobility.constraintAreaMinX = 595m
 *.pedestrian1.mobility.constraintAreaMinY = 75m
-*.pedestrian1.mobility.constraintAreaMaxX = 600m
+*.pedestrian1.mobility.constraintAreaMaxX = 605m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
 # pedestrians common movement parameters
@@ -90,6 +89,8 @@ description = Displaying recent movement
 # mobility visualizer parameters
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
+################
+# Review 1
 
 
 [Config Visualization06]
@@ -107,14 +108,10 @@ description = Showing wifi association
 
 # interface table visualizer parameters must turn off, because they're overlapping
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
-*.visualizer.*.interfaceTableVisualizer.interfaceFilter = ""
+#*.visualizer.*.interfaceTableVisualizer.interfaceFilter = ""
 
-# Doesn't work
-*.visualizer.*.infoVisualizer.modules = "*.pedestrian*.wlan[0].mgmt"
-*.visualizer.*.infoVisualizer.backgroundColor = "gray"
-*.visualizer.*.infoVisualizer.fontColor = "blue"
-#*.visualizer.*.infoVisualizer.modules = "*.pedestrian*.wlan[0].mgmt.assocAP"
-#*.visualizer.*.infoVisualizer.content = "info"
+# ieee802.11 visualizer parameters
+*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 
 [Config Visualization08]
@@ -128,7 +125,7 @@ description = Displaying transmissions & receptions
 *.pedestrian1.udpApp[0].destAddresses = "pedestrian0"
 *.pedestrian*.udpApp[0].destPort = 5000
 *.pedestrian*.udpApp[0].localPort = 5000
-*.pedestrian*.udpApp[0].messageLength = 100B
+*.pedestrian*.udpApp[0].messageLength = 800B
 *.pedestrian*.udpApp[0].sendInterval = uniform(90ms, 110ms)
 *.pedestrian*.udpApp[0].packetName = "VoiceStream"
 
@@ -146,6 +143,8 @@ description = Showing propagating signals
 # medium visualizer parameter
 *.visualizer.*.mediumVisualizer.displaySignals = true
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 25ns
+#*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "ring"
+#*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "sphere"
 *.visualizer.osgVisualizer.mediumVisualizer.signalShape = "both"
 
 
@@ -165,3 +164,36 @@ description = Showing active data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "VoiceStream*"
 
 
+[Config Visualization12]
+extends = Visualization11
+description = Displaying throughput statistics
+
+# turn off association info
+*.visualizer.*.infoVisualizer.modules = ""
+
+# statistic visualizer parameters
+*.visualizer.*.statisticVisualizer.signalName = "rcvdPk"
+*.visualizer.*.statisticVisualizer.statisticName = "throughput"
+*.visualizer.*.statisticVisualizer.prefix = "received"
+*.visualizer.*.statisticVisualizer.unit = "Mbps kbps"
+*.visualizer.*.statisticVisualizer.sourcePathFilter = "**.udpApp[0]"
+*.visualizer.*.statisticVisualizer.minValue = 0
+*.visualizer.*.statisticVisualizer.maxValue = 4E+6
+
+
+#########
+[Config Visualization13]
+extends = Visualization12
+description = Showing routing tables
+network = VisualizationC
+
+# add pedestrianVideo
+*.pedestrianVideo.wlan[*].radio.transmitter.power = 0.7mW
+# initialize its position
+
+*.accessPoint.mobilityType = "StationaryMobility"
+*.pedestrianVideo.mobility.initialX = 468m
+*.pedestrianVideo.mobility.initialY = 202m
+
+# routing table visualizer
+*.visualizer.*.routingTableVisualizer.destinationFilter = "*"
