update TODO files, add VisualizationC, -D, -E networks, replace UDPBasicApp to SimpleVoIP, add steps 13-17, add text step 13-16

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -35,7 +35,7 @@ description = Displaying communication & interference range
 network = VisualizationB
 
 # wlan parameters
-*.accessPoint.wlan[*].radio.transmitter.power = 1mW
+*.accessPoint0.wlan[*].radio.transmitter.power = 1mW
 *.pedestrian*.wlan[*].radio.transmitter.power = 0.7mW
 
 # medium visualizer parameters
@@ -56,12 +56,9 @@ description = Using 3D models for network nodes
 extends = Visualization04
 description = Displaying recent movement
 
-# access point mobility parameters
-*.accessPoint.mobilityType = "StationaryMobility"
-
 # pedestrians common initial parameters
 *.pedestrian*.mobilityType = "MassMobility"
-*.pedestrian*.mobility.initialZ = 0.5m
+*.**.mobility.initialZ = 0.5m
 *.pedestrian*.mobility.initFromDisplayString = false
 
 # pedestrian0 mobility parameters
@@ -74,9 +71,9 @@ description = Displaying recent movement
 
 # pedestrian1 mobility parameters
 *.pedestrian1.mobility.initialX = 600m
-*.pedestrian1.mobility.initialY = 85m
+*.pedestrian1.mobility.initialY = 90m
 *.pedestrian1.mobility.constraintAreaMinX = 595m
-*.pedestrian1.mobility.constraintAreaMinY = 75m
+*.pedestrian1.mobility.constraintAreaMinY = 85m
 *.pedestrian1.mobility.constraintAreaMaxX = 605m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
@@ -108,7 +105,6 @@ description = Showing wifi association
 
 # interface table visualizer parameters must turn off, because they're overlapping
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
-#*.visualizer.*.interfaceTableVisualizer.interfaceFilter = ""
 
 # ieee802.11 visualizer parameters
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
@@ -118,16 +114,17 @@ description = Showing wifi association
 extends = Visualization07
 description = Displaying transmissions & receptions
 
-# void application parameters
+# voip application parameters
 *.pedestrian*.numUdpApps = 1
-*.pedestrian*.udpApp[0].typename = "UDPBasicApp"
-*.pedestrian0.udpApp[0].destAddresses = "pedestrian1"
-*.pedestrian1.udpApp[0].destAddresses = "pedestrian0"
-*.pedestrian*.udpApp[0].destPort = 5000
-*.pedestrian*.udpApp[0].localPort = 5000
-*.pedestrian*.udpApp[0].messageLength = 800B
-*.pedestrian*.udpApp[0].sendInterval = uniform(90ms, 110ms)
-*.pedestrian*.udpApp[0].packetName = "VoiceStream"
+
+*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
+*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
+*.pedestrian0.udpApp[0].localPort = 5000
+*.pedestrian0.udpApp[0].destPort = 5000
+
+*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
+*.pedestrian1.udpApp[0].localPort = 5000
+
 
 # medium visualizer parameters
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
@@ -152,6 +149,7 @@ description = Showing propagating signals
 extends = Visualization09
 description = Showing active physical links
 
+# turn on physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
 
 
@@ -159,9 +157,11 @@ description = Showing active physical links
 extends = Visualization10
 description = Showing active data links
 
-# link visualizer parameters
+# turn off physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = ""
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "VoiceStream*"
+
+# turn on data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 
 
 [Config Visualization12]
@@ -172,13 +172,11 @@ description = Displaying throughput statistics
 *.visualizer.*.infoVisualizer.modules = ""
 
 # statistic visualizer parameters
-*.visualizer.*.statisticVisualizer.signalName = "rcvdPk"
-*.visualizer.*.statisticVisualizer.statisticName = "throughput"
-*.visualizer.*.statisticVisualizer.prefix = "received"
-*.visualizer.*.statisticVisualizer.unit = "Mbps kbps"
+*.visualizer.*.statisticVisualizer.signalName = "VoIPPacketLossRate"
+*.visualizer.*.statisticVisualizer.statisticName = "packetLossRate"
+*.visualizer.*.statisticVisualizer.prefix = "Packet loss"
+*.visualizer.*.statisticVisualizer.unit = "ratio"
 *.visualizer.*.statisticVisualizer.sourcePathFilter = "**.udpApp[0]"
-*.visualizer.*.statisticVisualizer.minValue = 0
-*.visualizer.*.statisticVisualizer.maxValue = 4E+6
 
 
 #########
@@ -189,11 +187,113 @@ network = VisualizationC
 
 # add pedestrianVideo
 *.pedestrianVideo.wlan[*].radio.transmitter.power = 0.7mW
-# initialize its position
 
-*.accessPoint.mobilityType = "StationaryMobility"
+# initialize pedestrianVideo position
+*.pedestrianVideo.mobilityType = "StationaryMobility"
 *.pedestrianVideo.mobility.initialX = 468m
 *.pedestrianVideo.mobility.initialY = 202m
 
+*.router0.mobilityType = "StationaryMobility"
+*.router0.mobility.initialX = 511m
+*.router0.mobility.initialY = 234m
+
+*.server0.mobilityType = "StationaryMobility"
+*.server0.mobility.initialX = 443m
+*.server0.mobility.initialY = 405m
+
+# server application parameters
+*.server0.numUdpApps = 1
+*.server0.udpApp[0].typename = "UDPVideoStreamSvr"
+*.server0.udpApp[0].localPort = 4000
+*.server0.udpApp[0].sendInterval = exponential(1ms)
+*.server0.udpApp[0].packetLen = 1000B
+*.server0.udpApp[0].videoSize = 800000000B
+
+# client application parameters
+*.pedestrianVideo.numUdpApps = 1
+*.pedestrianVideo.udpApp[0].typename = "UDPVideoStreamCli"
+*.pedestrianVideo.udpApp[0].localPort = 4000
+*.pedestrianVideo.udpApp[0].serverAddress = "server0"
+*.pedestrianVideo.udpApp[0].serverPort = 4000
+
+# turn off data link visualizer
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
+
 # routing table visualizer
-*.visualizer.*.routingTableVisualizer.destinationFilter = "*"
+#*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+*.visualizer.*.routingTableVisualizer.destinationFilter = "*.pedestrianVideo"
+
+
+[Config Visualization14]
+extends = Visualization13
+description = Displaying 802.11 channel access state
+
+# turn off statistic visualizer
+*.visualizer.*.statisticVisualizer.signalName = ""
+*.visualizer.*.statisticVisualizer.statisticName = ""
+
+# info visualizer parameters
+*.visualizer.*.infoVisualizer.modules = "*.*.wlan[0].mac.ctn[0]"
+*.visualizer.*.infoVisualizer.content = "displayStringText"
+
+
+[Config Visualization15]
+extends = Visualization14
+description = Showing active network routes
+network = VisualizationD
+
+# access points settings
+*.accessPoint1.wlan[*].radio.transmitter.power = 1mW
+*.accessPoint1.mobilityType = "StationaryMobility"
+*.accessPoint1.mobility.initialX = 630m
+*.accessPoint1.mobility.initialY = 205m
+
+# router settings
+*.router0.mobilityType = "StationaryMobility"
+*.router0.mobility.initialX = 616m
+*.router0.mobility.initialY = 244m
+
+# pedestrian1 mobility parameters. Change because of access points placing
+*.pedestrian1.mobility.initialX = 630m
+*.pedestrian1.mobility.initialY = 90m
+*.pedestrian1.mobility.constraintAreaMinX = 625m
+*.pedestrian1.mobility.constraintAreaMinY = 85m
+*.pedestrian1.mobility.constraintAreaMaxX = 635m
+*.pedestrian1.mobility.constraintAreaMaxY = 230m
+
+
+#*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+*.visualizer.*.routingTableVisualizer.destinationFilter = ""
+
+# wifi parameters
+*.accessPoint0.wlan[0].mgmt.ssid = "inet"
+*.accessPoint1.wlan[0].mgmt.ssid = "omnet"
+*.pedestrian0.wlan[0].agent.default_ssid = "inet"
+*.pedestrianVideo.wlan[0].agent.default_ssid = "inet"
+*.pedestrian1.wlan[0].agent.default_ssid = "omnet"
+
+# should showing the difference between dataLink and route
+#*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+
+# network route visualizer
+#*.visualizer.*.routeVisualizer.subscriptionModule = "**"
+#*.visualizer.*.routeVisualizer.packetNameFilter = "*VoIP*"
+
+
+[Config Visualization16]
+extends = Visualization15
+description = Displaying physical environment
+network = VisualizationE
+
+# physical environment parameters
+*.physicalEnvironment.coordinateSystemModule = "coordinateSystem"
+*.physicalEnvironment.config = xmldoc("obstacle.xml")
+
+
+[Config Visualization17]
+extends = Visualization16
+description = Displaying obstacle loss
+
+# visualizer parameters
+*.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true # enables displaying intersections between physical objects and primary propagation path
+*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true # enables displaying face normal vectors for physical objects at intersections
